# ELLA_fab4

./: Dockerfile  HOW_TO_RUN.md  README.md  docker-compose.yaml  mlflow.db  pyproject.toml  way_of_working.md
data/: brottsbalken_clean.json
data/clean_data/: brottsbalken_clean.json
explorations/: brottsbalken.json  brottsbalken.txt  brottsbalken_chunks.json  brottsbalken_clean.json  exploration.ipynb  parse.py  parse2.py  vectorize.ipynb
explorations/data/: brottsbalken.md
explorations/lancedb/brottsbalken.lance/_transactions/: 0-f81c697a-fede-4de0-8bd8-e5eb34e59fb1.txn  1-c8a0dcf1-dce8-44ae-8ef7-2a2d0f074135.txn  10-95563aa7-ab03-4c6a-8353-166f60beb501.txn  2-aeb4ff56-5768-4e3d-bf4d-c9acf1e6140c.txn  3-4cf36fae-eeee-415e-9865-6770358250ac.txn  4-ffb0f74a-774c-4336-b617-ed7371eeb88f.txn  5-0b0795f9-4b2e-43a6-b68b-b3c8542f9726.txn  6-77697fda-ccb2-4f0c-9b5b-ab3dd42b608d.txn  7-425cdae6-26eb-4ac3-a94b-4eda04fab10b.txn  8-bc33ed5a-e250-4a69-bc46-dad33c9e8564.txn  9-6186b169-34cf-46c3-a17c-29c8878be8ad.txn
scripts/: vectorize.py
src/brottsbalken/: __init__.py
src/brottsbalken/backend/: agents.py  api.py  constants.py  data_models.py  dockerfile  middleware.py  pyproject.toml  retriever.py
src/brottsbalken/explorations/: vectorize.ipynb
src/brottsbalken/frontend/: app.py  dockerfile  pyproject.toml  utils.py
src/brottsbalken/frontend/pages/: 1_Chatbot.py  2_Om_tjänsten.py
src/brottsbalken/monitoring/: dockerfile  evaluation_data_short.json  mlflow.db  monitoring.ipynb  prompt_engineering.ipynb  pyproject.toml
src/brottsbalken/scripts/: parse.py  vectorize.py
src/brottsbalken/utils/: constants.py
utils/: constants.py
(+37 files in other folders)
